--- a/index.html
+++ b/index.html
@@ -2,10 +2,28 @@
 <head>
 <meta charset="utf8"/>
 <title>Web QRCode Reader</title>
-<script src="//code.jquery.com/jquery-2.0.3.min.js"></script>
+<script src="//code.jquery.com/jquery-2.2.4.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/jsqr@1.3.1/dist/jsQR.min.js"></script>
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.3.0/css/bootstrap.min.css" rel="stylesheet"/>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.3.0/js/bootstrap.min.js"></script>
+
+<meta name="viewport" content="width=device-width,initial-scale=1"/>
+<meta name="apple-mobile-web-app-capable" content="yes"/>
+<meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+<meta name="apple-mobile-web-app-title" content="Web QRCode Reader"/>
+
+<style type="text/css">
+html, body{
+  text-align: center;
+  background-color: #fafafa;
+  font-size: 20px;
+  color: #333;
+}
+#mycanvas{
+  border: 1px solid #333;
+}
+</style>
+
 <script>
 var canvas = null;
 var ctx = null;
@@ -23,30 +41,6 @@ function selectReadFile( e ){
   //reader.readAsDataURL( file[0] );
   reader.onload = function(){
     readDrawImg( reader, canvas, 0, 0 );
-
-    //. POST /image
-    /*
-    var form = $('#form1').get()[0];
-    var data = new FormData( form );
-    //data.append( '_id', id );
-    console.log( data );
-    $.ajax({
-      type: 'POST',
-      url: '/image',
-      data: data,
-      processData: false,
-      contentType: false,
-      dataType: 'json',
-      success: function( data ){
-        console.log( data );
-      },
-      error: function( jqXHR, textStatus, errorThrown ){
-        console.log( 'Error : POST /image' );
-        console.log( textStatus );
-        console.log( errorThrown );
-      }
-    });
-    */
   }
   reader.readAsDataURL( file[0] );
 }
@@ -114,7 +108,7 @@ function printWidthHeight( width_height_id, flag, w, h ){
     wh.innerHTML = "なし";
     return;
   }
-  wh.innerHTML = 'width: ' + w + ' height: ' + h;
+  wh.innerHTML = '幅: ' + w + ', 高さ: ' + h;
 }
 
 function checkQRCode(){
@@ -130,12 +124,14 @@ function checkQRCode(){
 </script>
 </head>
 <body>
+<div class="container">
   <h1>Web QRCode</h1>
-  <p>リサイズ前画像 <span id="src-width-height">width: height: </span></p>
-  <p>リサイズ後画像 <span id="dst-width-height">width: height: </span></p>
+  <p>リサイズ前画像 <span id="src-width-height">幅: 高さ: </span></p>
+  <p>リサイズ後画像 <span id="dst-width-height">幅: 高さ: </span></p>
   <p><form id="form1" enctype="multipart/form-data"><input type="file" accept="image/*" capture="camera" name="file" id="file-image"/></form></p>
   <div>
     <canvas id="mycanvas"></canvas>
   </div>
+</div>
 </body>
 </html>
